--- a/settings.ini
+++ b/settings.ini
@@ -3,11 +3,13 @@ WindowSize = 1220,880
 FPS = 120
 
 [Game]
+DEBUG = False
 ServerLocal = 192.168.1.11
-ServerGlobal = 192.168.1.11
-PORT = 9090
+ServerGlobal = 94.228.114.71
+PORT = 9091
 Flags = 0
 
 [Server]
 HOST = 0.0.0.0
-PORT = 9090
+PORT = 9091
+DEBUG = false
