--- a/settings.ini
+++ b/settings.ini
@@ -3,13 +3,14 @@ WindowSize = 1220,880
 FPS = 120
 
 [Game]
-DEBUG = False
+DEBUG = True
+ServerType = ServerLocal
 ServerLocal = 192.168.1.11
 ServerGlobal = 94.228.114.71
-PORT = 9091
+PORT = 9092
 Flags = 0
 
 [Server]
 HOST = 0.0.0.0
-PORT = 9091
+PORT = 9092
 DEBUG = false
