--- a/settings.ini
+++ b/settings.ini
@@ -3,11 +3,13 @@ WindowSize = 1220,880
 FPS = 120
 
 [Game]
-DEBUG = True
-ServerType = ServerLocal
+DEBUG = False
+Online = True
+ServerType = ServerGlobal
 ServerLocal = 192.168.1.11
 ServerGlobal = 94.228.114.71
 PORT = 9092
+SmoothCamera = True
 Flags = 0
 
 [Server]
