--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ FPS = 120
 [Game]
 DEBUG = False
 Online = True
-ServerType = ServerGlobal
+ServerIsLocal = false
 ServerLocal = 192.168.1.11
 ServerGlobal = 94.228.114.71
 PORT = 9092
